--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint-config-next": "^13.4.2",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
     "ethers": "^5.7.2",
-    "next": "^13.4.2",
-    "react": "^18.2.0",
+    "next": "13.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "web3modal": "^1.9.12"
-  },
-  "devDependencies": {
-    "eslint": "^8.40.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
+
