--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,12 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-
+  "imports": {
+    "#dep": {
+      "node": "dep-node-native",
+      "default": "./dep-polyfill.js"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +21,12 @@
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "web3modal": "^1.9.12"
-  }
+    "web3modal": "^1.9.12",
+    "dep-node-native": "^1.0.0"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "devDependencies": {},
+  "author": "Suitec9",
+  "license": "ISC"
 }
-
