--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,12 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "imports": {
-    "#dep": {
-      "node": "dep-node-native",
-      "default": "./dep-polyfill.js"
-    }
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
     "ethers": "^5.7.2",
-    "next": "13.4.3",
+    "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "web3modal": "^1.9.12",
-    "dep-node-native": "^1.0.0"
+    "web3modal": "^1.9.12"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
